--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HEX App Store</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
 body { margin:0; font-family: Arial; background:#121212; color:#fff;}
 header{background:#1E1E1E; padding:20px;text-align:center;}
@@ -14,7 +15,8 @@ button{padding:10px 15px;margin:5px; cursor:pointer;border:none;border-radius:5p
 footer{background:#1E1E1E; padding:20px; text-align:center; font-size:14px; margin-top:30px;}
 .modal{display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); justify-content:center; align-items:center;}
 .modal-content{background:#222; padding:20px; border-radius:10px; width:90%; max-width:500px;}
-input, select{width:90%; padding:8px; margin:5px 0; border-radius:5px; border:none; background:#333; color:#fff;}
+input, select, textarea{width:90%; padding:8px; margin:5px 0; border-radius:5px; border:none; background:#333; color:#fff;}
+.rating span{cursor:pointer; font-size:20px;}
 </style>
 </head>
 <body>
@@ -77,7 +79,7 @@ input, select{width:90%; padding:8px; margin:5px 0; border-radius:5px; border:no
 </div>
 
 <script type="module">
-// ============ إعداد Supabase ===========
+// =================== إعداد Supabase ===================
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
 const SUPABASE_URL="https://iwgmnfuxxomwtwmkfzjn.supabase.co";
 const SUPABASE_KEY="sb_publishable_HasRVGxmcFaYhgqv1IMWhA_huNgIfiJ";
@@ -108,13 +110,16 @@ async function loadApps(){
             <p>منصة: ${app.platform}</p>
             <p>فئة: ${app.category}</p>
             <a href="${app.link}" target="_blank"><button style="background:green;color:white;">تنزيل</button></a>
+            <div class="rating" id="rating-${app.id}">⭐⭐⭐⭐⭐</div>
+            <textarea placeholder="اكتب تعليقك" id="comment-${app.id}"></textarea>
+            <button onclick="addComment('${app.id}')">تعليق</button>
         `;
         container.appendChild(card);
     });
 }
 loadApps();
 
-// ================== فتح وغلق النوافذ ==========
+// ================== فتح وغلق النوافذ ==================
 function showPublishModal(){ document.getElementById("publishModal").style.display="flex"; }
 function closeModal(){ document.getElementById("publishModal").style.display="none"; }
 function openAdminPanel(){ document.getElementById("adminPanel").style.display="flex"; loadAdminApps();}
@@ -164,9 +169,24 @@ async function loadAdminApps(){
         adminDiv.appendChild(div);
     });
 }
-async function acceptApp(id){ alert("تم قبول التطبيق!"); loadApps();}
+
+async function acceptApp(id){ 
+    alert("تم قبول التطبيق!"); 
+    // فتح Gmail تلقائي لإرسال إشعار
+    window.open(`https://mail.google.com/mail/?view=cm&fs=1&to=user@example.com&su=تم+قبول+تطبيقك&body=تطبيقك+تم+قبوله+في+HEX+App+Store`);
+    loadApps();
+}
 async function rejectApp(id){ alert("تم رفض التطبيق!"); }
 async function deleteApp(id){ await supabase.from('apps').delete().eq('id',id); loadApps(); loadAdminApps();}
+
+// ================== إضافة تعليق ==================
+async function addComment(id){
+    const comment=document.getElementById(`comment-${id}`).value;
+    if(!comment){ alert("اكتب تعليقاً"); return;}
+    await supabase.from('comments').insert([{app_id:id,comment,created_at:new Date()}]);
+    alert("تم إضافة تعليقك!");
+    document.getElementById(`comment-${id}`).value="";
+}
 </script>
 
 </body>
